# rustbem

./: .gitignore  Cargo.toml  Readme.md
src/: bem.rs  boundarydata.rs  main.rs
