[package]
name = "rustbem"
version = "0.1.0"
edition = "2024"

[dependencies]
num-complex = "0.4"
rayon = "1.10"
scilib = "1.0.0"
plotters = "0.3"
plotters-svg = "0.3"
plotters-bitmap = "0.3"
colorous = "1.0"
bessel = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"